@startuml Builder

object Client {
    -director
    +builder
    +makePostcard()
}

class Director {
    -PostcardBuilder
    +makeBlackAndWhitePostcard()
    +makeColoredPostcard()
}

interface PostcardBuilder {
    +reset()
    +setGloss()
    +setRoundEdges()
    +setTwoSidedPrinting()
    +getPostcard
}

class BlackAndWhitePostcard {
    +highlights
    +listHighlights()
}

class ColoredPostcard {
    +highlights
    +listHighlights()
}

class BlackAndWhitePostcardBuilder {
    +reset()
    +setGloss()
    +setRoundEdges()
    +setTwoSidedPrinting()
    +getPostcard
}

class ColoredPostcardBuilder {
    +reset()
    +setGloss()
    +setRoundEdges()
    +setTwoSidedPrinting()
    +getPostcard
}

note top of PostcardBuilder : Builder

note "Concrete Builder" as ConcreteBuilder
BlackAndWhitePostcardBuilder .. ConcreteBuilder
ColoredPostcardBuilder .. ConcreteBuilder

note "Product" as Product
Product .. BlackAndWhitePostcard
Product .. ColoredPostcard

Client --> Director
Client ..> PostcardBuilder
Director --> PostcardBuilder
PostcardBuilder <|-- BlackAndWhitePostcardBuilder
PostcardBuilder <|-- ColoredPostcardBuilder
BlackAndWhitePostcard <-- BlackAndWhitePostcardBuilder
ColoredPostcard <-- ColoredPostcardBuilder


